fix(index_final): section 3

--- a/index_final.html
+++ b/index_final.html
@@ -60,27 +60,27 @@
 
 	<!-- SECCION 1 --> 
 	<section class="section first fondo1">
-		<div class="diapo diapo_1 no-animate">
+		<div class="diapo diapo_1 no-animated">
 			<!-- Contenido seccion -->
 			<div class="container fullheight">
 			   <div class="row fullheight">
 				<div class="col-sm-12 fullheight">
 
-					<div class="aros centered no-animate step step_orderToAnimate-1">
+					<div class="aros centered no-animated step step_orderToAnimate-1">
 						<img src="img/uno/arosolimpicos.png" class="rings_all" alt="Aros Olímpicos">
 
-						<img src="img/uno/aros-circle_blue.png" class="rings ring_blue no-animate" alt="" />
-						<img src="img/uno/aros-circle_negro.png" class="rings ring_black no-animate" alt="" />
-						<img src="img/uno/aros-circle_red.png" class="rings ring_red no-animate" alt="" />
-						<img src="img/uno/aros-circle_yellow.png" class="rings ring_yellow no-animate" alt="" />
-						<img src="img/uno/aros-circle_green.png" class="rings ring_green no-animate" alt="" />
+						<img src="img/uno/aros-circle_blue.png" class="rings ring_blue no-animated" alt="" />
+						<img src="img/uno/aros-circle_negro.png" class="rings ring_black no-animated" alt="" />
+						<img src="img/uno/aros-circle_red.png" class="rings ring_red no-animated" alt="" />
+						<img src="img/uno/aros-circle_yellow.png" class="rings ring_yellow no-animated" alt="" />
+						<img src="img/uno/aros-circle_green.png" class="rings ring_green no-animated" alt="" />
 					</div>
 					<div class="centered contenido">
 						<h1 class="text-center">Ressorgiment</h1>
 						<p class="text-center"><strong>Els Jocs Olímpics de Barcelona van celebrar-se entre el 25 de juliol i el 9 d'agost de 1992</strong>.  La designació com a ciutat organitzadora comportà una profunda transformació urbanística, social i la creació de nous equipaments. Aquest esforç es complementà amb una acurada imatge corporativa, sota la voluntat de presentar una ciutat moderna i actual.  I en aquest sentit, la <strong>filatèlia olímpica va tenir un gran paper</strong>. </p>
 					</div>
 
-					<div class="cobi no-animate step step_orderToAnimate-2">
+					<div class="cobi no-animated step step_orderToAnimate-2">
 						<img src="img/uno/cobi.png" alt="Cobi">
 					</div>
 
@@ -89,7 +89,7 @@
 			</div>
 		</div>
 
-		<div class="diapo diapo_2 no-animate step step_orderToAnimate-3">
+		<div class="diapo diapo_2 no-animated step step_orderToAnimate-3">
 			<div class="container fullheight">
 				<div class="row fullheight">
 					<div class="col-sm-12 fullheight">
@@ -105,10 +105,10 @@
 							<div class="row">
 								<div class="col-sm-12">
 									<div class="col-sm-6 p60 text-right">
-										<p class="text no-animate step step_orderToAnimate-4">Molt abans del 1992, Barcelona va ser nomenada seu de l'Olimpíada Popular, concretament entre el 19  i el 26 de juliol del 1936.</p>
-										<span class="minidesc claim no-animate step step_orderToAnimate-6">Vinyeta de 10 cèntims emesa  per recaptar diners per a la celebració de l'Olimpíada Popular, 1936. </span>
+										<p class="text no-animated step step_orderToAnimate-4">Molt abans del 1992, Barcelona va ser nomenada seu de l'Olimpíada Popular, concretament entre el 19  i el 26 de juliol del 1936.</p>
+										<span class="minidesc claim no-animated step step_orderToAnimate-6">Vinyeta de 10 cèntims emesa  per recaptar diners per a la celebració de l'Olimpíada Popular, 1936. </span>
 									</div>
-									<div class="col-sm-6 p60 image no-animate step step_orderToAnimate-5">
+									<div class="col-sm-6 p60 image no-animated step step_orderToAnimate-5">
 										<img class="rota5" src="img/uno/olimpiada_popular.png" alt="Olimpiada Popular">
 									</div>
 								</div>
@@ -129,7 +129,7 @@
 				<div class="row fullheight">
 					<div class="col-sm-12 fullheight">
 						<div class="centered contenido">
-							<div class="titulodesc no-animate step step_orderToAnimate-1">
+							<div class="titulodesc no-animated step step_orderToAnimate-1">
 								<h1 class="text-center">Barcelona '92</h1>
 								<p class="text-center">Barcelona va ser escollida seu de la XXV edició dels Jocs d'Estiu durant la 91a sessió del Comitè Olímpic Internacional, celebrada el 17 d'octubre de 1986 a Lausana, Suïssa. <strong>La nominació va despertar l'eufòria per tota Catalunya.</strong> </p>
 								<p class="text-center">S'iniciava una carrera contra-rellotge per acollir el que serien <strong>"els millors Jocs Olímpics de la història", segons declaracions de Joan Antoni Samaranch.</strong></p>
@@ -138,22 +138,22 @@
 
 					 </div>
 				</div>
-				<div class="img-esquina-r-t no-animate">
+				<div class="img-esquina-r-t no-animated">
 					<img src="img/dos/plaza-catalunya1.png" alt="">
-					<div class="minidesc no-animate step step_orderToAnimate-2">
+					<div class="minidesc no-animated">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sollicitudin dolor at </p>
 					</div>
 				</div>
-				<div class="img-esquina-l-b no-animate">
+				<div class="img-esquina-l-b no-animated">
 					<img src="img/dos/estadio-olimpico1.png" alt="">
-					<div class="minidesc no-animate">
+					<div class="minidesc no-animated">
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur</p>
 					</div>
 				</div>
 			</div>
 
 		</div>
-		<div class="diapo diapo_2 no-animate step step_orderToAnimate-3">
+		<div class="diapo diapo_2 no-animated step step_orderToAnimate-3">
 			<div class="container fullheight">
 				<div class="row fullheight">
 					<div class="col-sm-12 fullheight">
@@ -182,31 +182,26 @@
 	</section>	
 
 	<!-- SECCION 5 --> 
-	<section class="section fourth fondo3">
-	 	<div class="container fullheight">
-		   	<div class="row">
-		   		<div class="col-sm-12">
-		   			<div class="titulodesc">
- 						<h1 class="text-center">La mascota olímpica</h1>
-						<p class="text-center">El projecte olímpic de Barcelona '92 tingué com a protagonista a Cobi, un gos d'atura català passat pel sedàs del dissenyador Xavier Mariscal. La mascota ocupà un lloc rellevant en tots els elements gràfics de les olimpíades, inclosa la filatèlia.</p>
- 					</div>
-		   		</div>
-
-				<div class="col-sm-12 fullheight">
-					<div class="contenido">
-						<div class="col-sm-4">
-							<img src="img/tres/cobi_presentacion.png" alt="Cobi Presentación">
-						</div>
-
-						<div class="col-sm-4">
-							<img src="img/tres/cobi_filatellic0.png" alt="Cobi Filatellic">
-						</div>
-						<div class="col-sm-4">
-							<img src="img/tres/cobi_filatellic.png" alt="Cobi Filatellic 1">
+	<section class="section third fondo3">
+		<div class="diapo diapo_1">
+			<div class="container fullheight">
+				<div class="row">
+					<div class="col-sm-12">
+						<div class="titulodesc">
+							<h1 class="text-center">La mascota olímpica</h1>
+							<p class="text-center">El projecte olímpic de Barcelona '92 tingué com a protagonista a Cobi, un gos d'atura català passat pel sedàs del dissenyador Xavier Mariscal. La mascota ocupà un lloc rellevant en tots els elements gràfics de les olimpíades, inclosa la filatèlia.</p>
 						</div>
 					</div>
 
-				 </div>
+					<div class="col-sm-12 fullheight">
+						<div class="contenido">
+							<img src="img/tres/cobi_presentacion.png" alt="Cobi Presentación" class="image_mariscal step step_orderToAnimate-1 no-animated">
+							<img src="img/tres/cobi_filatellic0.png" alt="Cobi Filatellic" class="image_cobiCirculo no-animated">
+							<img src="img/tres/cobi_filatellic.png" alt="Cobi Filatellic 1" class="image_cobiSello no-animated">
+						</div>
+
+					 </div>
+				</div>
 			</div>
 		</div>
 	</section>
