--- a/index_javi.html
+++ b/index_javi.html
@@ -13,7 +13,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,700i,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.4.0/animate.min.css" media="all">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/style_final.css">
+	<link rel="stylesheet" href="css/style_javi.css">
 </head>
 <body>
 
