--- a/index_javi.html
+++ b/index_javi.html
@@ -484,6 +484,6 @@
 <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/query.scrollsteps-full-min.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
-<script src="js/scrollControll.js"></script>
+<script src="js/scrollControll_javi.js"></script>
 </body>
 </html>
