fix(index): hide menu incorrect

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-<div class="full-menu">
+<div class="full-menu" style="display: none">
 	<nav id="menu" class="menu">
 		<ul>
 			<li class="introduccio"><a href="#firstsection">Introducció</a></li>
