feat(index_final): section 4

--- a/index_final.html
+++ b/index_final.html
@@ -300,62 +300,41 @@
 
 					<!-- Contenido -->
 					<div class="container">
-						<div class="row">
+						<div class="row position-relative">
 							<div class="col-sm-12 col-xs-12">
 								<div class="titulodesc">
 									<h1 class="text-center">Les Olimpíades Culturals</h1>
 								</div>
 							</div>
 
-							<div class="col-xs-12 col-sm-8 col-sm-offset-2">
-								<div class="contenido">
-									<div class="col-sm-6">
-										<img class="rota4mov" src="img/tres/olimpiadacultural.png" alt="Cobi Presentación">
-										<span class="zoom2"><img src="img/ampliar.png" alt=""></span>
-									</div>
-
-									<div class="col-xs-12 col-sm-6">
-										<p class="text-left pt80">La candidatura olímpica contemplà canvis en matèria  de transports, urbanisme, comunicacions i infraestructures. A més, però, <strong>també es van assolir millores en matèria  de política cultural.</strong></p>
-									</div>
+							<div class="col-xs-12 col-sm-8 col-sm-offset-2 part1 step step_orderToAnimate-1 no-animated">
+								<div class="col-sm-6">
+									<img class="rota4mov" src="img/tres/olimpiadacultural.png" alt="Cobi Presentación">
+									<span class="zoom2"><img src="img/ampliar.png" alt=""></span>
 								</div>
+
+								<div class="col-xs-12 col-sm-6">
+									<p class="text-left pt80">La candidatura olímpica contemplà canvis en matèria  de transports, urbanisme, comunicacions i infraestructures. A més, però, <strong>també es van assolir millores en matèria  de política cultural.</strong></p>
+								</div>
+							</div>
+
+						</div>
+					</div>
+
+					<div class="col-sm-12 flex-child part2 no-animated">
+						<div class="contenido">
+							<div class="col-sm-1">&nbsp;</div>
+							<div class="col-sm-5">
+								<p class="text-left"><strong>L'Olimpíada cultural es desenvolupà com a complement a l'activitat olímpica, entre 1989 i 1992</strong>. Durant aquest temps s'estructurà un programa ampli d'espectacles de dansa, teatre, música i exposicions, amb l'objectiu de reforçar la imatge olímpica. La iniciativa culminà amb l'organització del Festival Olímpic de les Arts, amb més de 200 activitats, des de l'abril fins a l'agost de 1992. <strong>Entre elles, s'organitzaren exposicions filatèliques i la presentació de segells de temàtica olímpica.</strong></p>
+							</div>
+							<div class="col-sm-6">
+								<img class="img-responsive" src="img/tres/tarjeta.png" alt="Cobi Presentación">
 							</div>
 						</div>
 					</div>
-					<div class="previs-tarjeta">
-						<img src="img/tres/tarjeta.png" alt="Invitación presentación sellos olímpicos">
-					</div>
 
 				</div>
 			</div>
-		</div>
-	</section>
-
-	<!-- SECCION 7 -->
-	<section class="section seven fondo3">
-
-		<!-- Contenido -->
-		<div class="container flex-parent">
-			<div class="row">
-				<div class="col-sm-12 flex-child">
-					<div class="titulodesc">
-						<h1 class="text-center">Les Olimpíades Culturals</h1>
-					</div>
-				</div>
-
-				<div class="col-sm-12 flex-child">
-					<div class="contenido">
-						<div class="col-sm-6">
-							<p class="text-left"><strong>L'Olimpíada cultural es desenvolupà com a complement a l'activitat olímpica, entre 1989 i 1992</strong>. Durant aquest temps s'estructurà un programa ampli d'espectacles de dansa, teatre, música i exposicions, amb l'objectiu de reforçar la imatge olímpica. La iniciativa culminà amb l'organització del Festival Olímpic de les Arts, amb més de 200 activitats, des de l'abril fins a l'agost de 1992. <strong>Entre elles, s'organitzaren exposicions filatèliques i la presentació de segells de temàtica olímpica.</strong></p>
-						</div>
-						<div class="col-sm-6">
-							<img class="img-responsive" src="img/tres/tarjeta.png" alt="Cobi Presentación">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="previs-top">
-			<img src="img/tres/olimpiadacultural.png" alt="Invitación presentación sellos olímpicos">
 		</div>
 	</section>
 
