fix(index_final): section 4. Updates

--- a/index_final.html
+++ b/index_final.html
@@ -327,9 +327,10 @@
 							<div class="col-sm-5">
 								<p class="text-left"><strong>L'Olimpíada cultural es desenvolupà com a complement a l'activitat olímpica, entre 1989 i 1992</strong>. Durant aquest temps s'estructurà un programa ampli d'espectacles de dansa, teatre, música i exposicions, amb l'objectiu de reforçar la imatge olímpica. La iniciativa culminà amb l'organització del Festival Olímpic de les Arts, amb més de 200 activitats, des de l'abril fins a l'agost de 1992. <strong>Entre elles, s'organitzaren exposicions filatèliques i la presentació de segells de temàtica olímpica.</strong></p>
 							</div>
-							<div class="col-sm-6">
+							<div class="col-sm-5">
 								<img class="img-responsive" src="img/tres/tarjeta.png" alt="Cobi Presentación">
 							</div>
+							<div class="col-sm-1">&nbsp;</div>
 						</div>
 					</div>
 
