--- a/index_final.html
+++ b/index_final.html
@@ -826,6 +826,7 @@
 <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/query.scrollsteps-full-min.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
+<script src="js/main_final.js"></script>
 <script src="js/scrollControll_final.js"></script>
 </body>
 </html>
