feat(scrollControl): hash change function and listener

--- a/index_final.html
+++ b/index_final.html
@@ -339,34 +339,42 @@
 		</div>
 	</section>
 
-	<!-- SECCION 8 -->
-	<section class="section eight fondo4">
+	<!-- SECCION 5 -->
+	<section class="section five fondo4">
 
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div class="titulodesc">
-						<h1 class="text-center">Olymphilex ‘92</h1>
-						<p class="text-center">En el marc de les activitats programades en l'Olimpíada Cultural es presentà la <strong>cinquena edició de l'Exposició Mundial de Filatèlia Olímpica i Esportiva</strong>, a la Facultat de Ciències Econòmiques de la Universitat de Barcelona. Un gran nombre d'expositors, col·leccionistes  i comerciants de l'àmbit filatèlic van exhibir segells i material postal de temàtica olímpica.</p>
-					</div>
-				</div>
+		<div class="diapo diapo_1">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
-				<div class="col-xs-12 col-sm-12">
-					<div class="contenido0">
-						<div class="col-xs-6 col-sm-6">
-							<img class="img-responsive right" src="img/cuatro/olymphilex_stamp.png" alt="Olymphilex Stamp">
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12">
+								<div class="titulodesc">
+									<h1 class="text-center">Olymphilex ‘92</h1>
+									<p class="text-center">En el marc de les activitats programades en l'Olimpíada Cultural es presentà la <strong>cinquena edició de l'Exposició Mundial de Filatèlia Olímpica i Esportiva</strong>, a la Facultat de Ciències Econòmiques de la Universitat de Barcelona. Un gran nombre d'expositors, col·leccionistes  i comerciants de l'àmbit filatèlic van exhibir segells i material postal de temàtica olímpica.</p>
+								</div>
+							</div>
+
+							<div class="col-xs-12 col-sm-12">
+								<div class="contenido0">
+									<div class="col-xs-6 col-sm-6">
+										<img class="img-responsive right" src="img/cuatro/olymphilex_stamp.png" alt="Olymphilex Stamp">
+									</div>
+									<div class="col-xs-6 col-sm-6">
+										<img class="img-responsive" src="img/cuatro/cobi_filatelic.png" alt="Cobi Filatelic">
+									</div>
+								</div>
+							</div>
+
+							<div class="col-sm-12">
+								<div class="contenido">
+									<p class="text-center">Dins del programa d'actes, <strong>la comissió presentà dos segells amb una tirada  de 2,500,000 d'exemplars cadascun</strong> i una medalla commemorativa, gràcies a la col·laboració de Correus i la Fábrica Nacional de Moneda y Timbre (FNMT).</p>
+								</div>
+							</div>
 						</div>
-						<div class="col-xs-6 col-sm-6">
-							<img class="img-responsive" src="img/cuatro/cobi_filatelic.png" alt="Cobi Filatelic">
-						</div>
 					</div>
-				</div>
 
-				<div class="col-sm-12">
-					<div class="contenido">
-						<p class="text-center">Dins del programa d'actes, <strong>la comissió presentà dos segells amb una tirada  de 2,500,000 d'exemplars cadascun</strong> i una medalla commemorativa, gràcies a la col·laboració de Correus i la Fábrica Nacional de Moneda y Timbre (FNMT).</p>
-					</div>
 				</div>
 			</div>
 		</div>
