--- a/index_final.html
+++ b/index_final.html
@@ -359,10 +359,10 @@
 							<div class="col-xs-12 col-sm-12">
 								<div class="contenido0">
 									<div class="col-xs-6 col-sm-6">
-										<img class="img-responsive right" src="img/cuatro/olymphilex_stamp.png" alt="Olymphilex Stamp">
+										<img class="img-responsive right image1 no-animated step step_orderToAnimate-1" src="img/cuatro/olymphilex_stamp.png" alt="Olymphilex Stamp">
 									</div>
 									<div class="col-xs-6 col-sm-6">
-										<img class="img-responsive" src="img/cuatro/cobi_filatelic.png" alt="Cobi Filatelic">
+										<img class="img-responsive image2 no-animated" src="img/cuatro/cobi_filatelic.png" alt="Cobi Filatelic">
 									</div>
 								</div>
 							</div>
