feat(index_final): section 6 - diapo 1

--- a/index_final.html
+++ b/index_final.html
@@ -380,49 +380,48 @@
 		</div>
 	</section>
 
-	<!-- SECCION 9 -->
-	<section id="epreolimpiques" class="section nine fondo5">
+	<!-- SECCION 6 -->
+	<section id="epreolimpiques" class="section six fondo5">
 
-		<!-- Contenido seccion -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
+		<div class="diapo diapo_1">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
-					<div class="contenido">
-						<h1 class="text-center">Les emissions filatèliques preolímpiques</h1>
-						<p class="text-center"><strong>La primera sèrie va editar-se l'any 1988 per la FNMT</strong>, a Madrid. L'estil trencador de les il·lustracions de Pere Torrent Peret el van fer mereixedor d'un <strong>premi Laus de disseny gràfic, per "la introducció d’una onada de frescor al disseny filatèlic"</strong>. Després de l'èxit d'aquesta primera entrega n'arribarien set més,  amb la participació de nous dissenyadors.</p>
+					<!-- Contenido seccion -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12 part1 step step_orderToAnimate-1 no-animated">
+
+								<div class="contenido">
+									<h1 class="text-center">Les emissions filatèliques preolímpiques</h1>
+									<p class="text-center"><strong>La primera sèrie va editar-se l'any 1988 per la FNMT</strong>, a Madrid. L'estil trencador de les il·lustracions de Pere Torrent Peret el van fer mereixedor d'un <strong>premi Laus de disseny gràfic, per "la introducció d’una onada de frescor al disseny filatèlic"</strong>. Després de l'èxit d'aquesta primera entrega n'arribarien set més,  amb la participació de nous dissenyadors.</p>
+								</div>
+
+							</div>
+						</div>
+					</div>
+
+
+					<div class="col-sm-12 part2 no-animated">
+						<div class="contenido">
+							<div class="col-sm-1">&nbsp;</div>
+
+							<div class="col-sm-3">
+								<img class="max-img sello" src="img/cinco/sello.png" alt="Sello Pre Olímpico Barcelona 92'">
+							</div>
+
+							<div class="col-sm-7">
+								<p class="text-left">L'emblema va ser dissenyat per Josep M. Trias, i representa una figura saltant sobre els arcs olímpics.</p>
+								<p class="text-left pt80">El disseny sintetitza la figura humana sense concretar el gènere, transmetent el sentit humà dels Jocs. Els colors blau, groc i vermell representen el mar, el sol i la vida, característics d'una ciutat mediterrània.</p>
+							</div>
+							<div class="col-sm-1">&nbsp;</div>
+						</div>
 					</div>
 
 				</div>
 			</div>
 		</div>
-		<div class="previs-sello rota5">
-			<img src="img/cinco/sello.png" alt="Sello Pre-Olimpicos Barcelona 92'">
-		</div>
 	</section>
-
-	<!-- SECCION 10 -->
-	<section class="section ten fondo5">
-
-		<!-- Contenido -->
-		<div class="container flex-parent">
-			<div class="row flex-child">
-				<div class="col-sm-12">
-					<div class="contenido">
-						<div class="col-sm-6">
-							<img class="max-img" src="img/cinco/sello.png" alt="Sello Pre Olímpico Barcelona 92'">
-						</div>
-
-						<div class="col-sm-6">
-							<p class="text-left">L'emblema va ser dissenyat per Josep M. Trias, i representa una figura saltant sobre els arcs olímpics.</p>
-							<p class="text-left pt80">El disseny sintetitza la figura humana sense concretar el gènere, transmetent el sentit humà dels Jocs. Els colors blau, groc i vermell representen el mar, el sol i la vida, característics d'una ciutat mediterrània.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
 
 	<!-- SECCION 11 -->
 	<section class="section eleven fondo5">
