feat(index_final): section 6 - diapo 2

--- a/index_final.html
+++ b/index_final.html
@@ -383,7 +383,7 @@
 	<!-- SECCION 6 -->
 	<section id="epreolimpiques" class="section six fondo5">
 
-		<div class="diapo diapo_1">
+		<div class="diapo diapo_1 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
 
@@ -421,31 +421,40 @@
 				</div>
 			</div>
 		</div>
-	</section>
 
-	<!-- SECCION 11 -->
-	<section class="section eleven fondo5">
+		<div class="diapo diapo_2 step step_orderToAnimate-2 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
-		<!-- Contenido -->
-		<div class="container flex-parent">
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 flex-child">
-					<div class="col-xs-12 col-sm-6">
-						<h1 class="pb10">Emissió preolímpica #1</h1>
-						<p class="text-left pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>.Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
+					<!-- Contenido -->
+					<div class="container flex-parent">
+						<div class="row">
+
+							<div class="col-xs-12 col-sm-12 col-md-12 flex-child">
+								<div class="col-xs-12 col-sm-6">
+									<h1 class="pb10">Emissió preolímpica #1</h1>
+									<p class="text-left pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>.Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
+								</div>
+
+								<div class="col-xs-12 col-sm-6">
+									<img class="rota2mov max-img sello1 step step_orderToAnimate-3 no-animated" src="img/cinco/sello20.png" alt="Sello Pre Olímpico Barcelona 92'">
+
+									<img class="rota2mov max-img sello2 no-animated" src="img/cinco/sello50.png" alt="Sello Pre Olímpico Barcelona 92'">
+
+									<img class="rota2mov max-img sello3 no-animated" src="img/cinco/sello45.png" alt="Sello Pre Olímpico Barcelona 92'">
+								</div>
+							</div>
+
+						</div>
 					</div>
 
-					<div class="col-xs-12 col-sm-6">
-						<img class="rota2mov max-img imgmw320" src="img/cinco/sello20.png" alt="Sello Pre Olímpico Barcelona 92'">
-
-						<img class="rota2mov max-img imgmw320" src="img/cinco/sello50.png" alt="Sello Pre Olímpico Barcelona 92'">
-
-						<img class="rota2mov max-img imgmw320" src="img/cinco/sello45.png" alt="Sello Pre Olímpico Barcelona 92'">
-					</div>
 				</div>
 			</div>
 		</div>
+
+
 	</section>
+
 
 	<!-- SECCION 12 -->
 	<section class="section twelve fondo5">
