feat(index_final): section 6 - diapo 3

--- a/index_final.html
+++ b/index_final.html
@@ -53,7 +53,7 @@
 	      <a href="#"><li>Info</li></a>
 	      <a href="#"><li>Contact</li></a>
 	      <a href="https://erikterwan.com/" target="_blank"><li>Show me more</li></a>
-	</ul>	
+	</ul>
 </div> -->
 
 <div class="scrolltotop">
@@ -453,34 +453,39 @@
 		</div>
 
 
-	</section>
+		<div class="diapo diapo_3 step step_orderToAnimate-3 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12 text-center">
+								<div>
+									<img class="hidden-xs max-img imgmw320 rotam3 sello1 step step_orderToAnimate-4 no-animated" src="img/cinco/2/sello2.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="hidden-xs absolute-center max-img imgmw320 rota3 sello2 no-animated" src="img/cinco/2/sello1.png" alt="Sello Pre Olímpico Barcelona 92'">
+								</div>
 
-	<!-- SECCION 12 -->
-	<section class="section twelve fondo5">
+								<h1 class="pb10">Emissió preolímpica #2</h1>
+								<p class="text-center pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>.Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
+								<div>
+									<img class="visible-xs absolute-center max-img imgmw320 rota3" src="img/cinco/2/sello1.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="visible-xs max-img imgmw320 rotam3" src="img/cinco/2/sello2.png" alt="Sello Pre Olímpico Barcelona 92'">
 
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 text-center">
-					<div>
-						<img class="hidden-xs max-img imgmw320 rotam3" src="img/cinco/2/sello2.png" alt="Sello Pre Olímpico Barcelona 92'">
-						<img class="hidden-xs absolute-center max-img imgmw320 rota3" src="img/cinco/2/sello1.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="absolute-center max-img imgmw320 rotam3 sello3 no-animated" src="img/cinco/2/sello4.png" alt="Sello Pre Olímpico Barcelona 92'">
+									<img class="max-img imgmw320 rota3 sello4 no-animated" src="img/cinco/2/sello3.png" alt="Sello Pre Olímpico Barcelona 92'">
+								</div>
+							</div>
+						</div>
 					</div>
 
-					<h1 class="pb10">Emissió preolímpica #2</h1>
-					<p class="text-center pt20">Dissenyador: <strong>Peret (Barcelona, 1945)</strong><br>.Esports representats: Atletisme, Bàsquet i Bàdminton.</p>
-					<div>
-						<img class="visible-xs absolute-center max-img imgmw320 rota3" src="img/cinco/2/sello1.png" alt="Sello Pre Olímpico Barcelona 92'">
-						<img class="visible-xs max-img imgmw320 rotam3" src="img/cinco/2/sello2.png" alt="Sello Pre Olímpico Barcelona 92'">
-
-						<img class="absolute-center max-img imgmw320 rotam3" src="img/cinco/2/sello4.png" alt="Sello Pre Olímpico Barcelona 92'">
-						<img class="max-img imgmw320 rota3" src="img/cinco/2/sello3.png" alt="Sello Pre Olímpico Barcelona 92'">
-					</div>
 				</div>
 			</div>
 		</div>
+
+
 	</section>
+
 
 	<!-- SECCION 13 -->
 	<section class="section thirteen fondo5">
