--- a/index_final.html
+++ b/index_final.html
@@ -483,36 +483,33 @@
 			</div>
 		</div>
 
+		<div class="diapo diapo_4 step step_orderToAnimate-4 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
-	</section>
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12">
+								<div>
+									<h1 class="text-right pt40 pb10">Emissió preolímpica #3</h1>
+									<p class="text-right pt20">Dissenyador: <strong>Robert Llimós i Oriol.</strong><br>.(Barcelona, 1943). Esports representats: Esgrima, Futbol i Gimnàstica.</p>
+								</div>
+							</div>
 
+							<img class="max-img imgmw320 sello1 step step_orderToAnimate-4 no-animated" src="img/cinco/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							<img class="absolute-center max-img imgmw320 sello2 no-animated" src="img/cinco/3/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							<img class="previs-bottom max-img imgmw320 sello3 no-animated" src="img/cinco/3/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 
-	<!-- SECCION 13 -->
-	<section class="section thirteen fondo5">
-
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div>
-						<h1 class="text-right pt40 pb10">Emissió preolímpica #3</h1>
-						<p class="text-right pt20">Dissenyador: <strong>Robert Llimós i Oriol.</strong><br>.(Barcelona, 1943). Esports representats: Esgrima, Futbol i Gimnàstica.</p>
+						</div>
 					</div>
-				</div>
-				<div class="previs-top2">
-					<img class="max-img imgmw320" src="img/cinco/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
 
-				<div>
-					<img class="absolute-center max-img imgmw320" src="img/cinco/3/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
 				</div>
-
-				<div>
-					<img class="previs-bottom max-img imgmw320" src="img/cinco/3/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
+
+
+
 	</section>
 
 	<!-- SECCION 14 -->
