feat(index_final): section 6 - diapo 5

--- a/index_final.html
+++ b/index_final.html
@@ -508,37 +508,33 @@
 			</div>
 		</div>
 
+		<div class="diapo diapo_5 step step_orderToAnimate-5 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12">
+								<div>
+									<h1 class="text-center pt40 pb10">Emissió preolímpica #4</h1>
+									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>.(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+								</div>
+							</div>
 
-	</section>
-
-	<!-- SECCION 14 -->
-	<section class="section fourteen fondo5">
-
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div>
-						<h1 class="text-center pt40 pb10">Emissió preolímpica #4</h1>
-						<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>.(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+						</div>
 					</div>
+
+					<img class="previs-top3 max-img imgmw320 rotam3 sello1 step step_orderToAnimate-6 no-animated" src="img/cinco/4/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+					<img class="absolute-center-left max-img imgmw320 rota3 sello2" src="img/cinco/4/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+					<img class="previs-bottom-right max-img imgmw320 rotam3 sello3" src="img/cinco/4/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+
 				</div>
-
-				<div>
-					<img class="previs-top3 max-img imgmw320 rotam3" src="img/cinco/4/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="absolute-center-left max-img imgmw320 rota3" src="img/cinco/4/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-right max-img imgmw320 rotam3" src="img/cinco/4/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
+
+
+
 	</section>
 
 	<!-- SECCION 15 -->
