feat(index_final): section 6 - diapo 6

--- a/index_final.html
+++ b/index_final.html
@@ -534,36 +534,43 @@
 		</div>
 
 
+		<div class="diapo diapo_6 step step_orderToAnimate-6 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
 
-	</section>
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row flex-parent">
+							<div class="col-sm-12 flex-child">
+								<div>
+									<h1 class="text-center pb10">Emissió preolímpica #5</h1>
+									<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>.(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+								</div>
+							</div>
 
-	<!-- SECCION 15 -->
-	<section class="section fifteen fondo5">
+							<div>
+								<img class="previs-top-center max-img imgmw320 rotam3 sello1 step step_orderToAnimate-6 no-animated" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
 
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row flex-parent">
-				<div class="col-sm-12 flex-child">
-					<div>
-						<h1 class="text-center pb10">Emissió preolímpica #5</h1>
-						<p class="text-center pt20">Dissenyador: <strong>Eduard Arranz-Bravo.</strong><br>.(Barcelona, 1941). Esports representats: Halterofília, Hoquei sobre herba i Judo.</p>
+							<div>
+								<img class="previs-bottom-left max-img imgmw320 rotam3 sello2" src="img/cinco/5/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="previs-bottom-right2 max-img imgmw320 rota3 sello3" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+
+						</div>
 					</div>
+
 				</div>
-
-				<div>
-					<img class="previs-top-center max-img imgmw320 rotam3" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-left max-img imgmw320 rotam3" src="img/cinco/5/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-right2 max-img imgmw320 rota3" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
 			</div>
+		</div>
+
+
+
+
 	</section>
 
 	<!-- SECCION 16 -->
