feat(index_final): section 6 - diapo 7

--- a/index_final.html
+++ b/index_final.html
@@ -569,38 +569,44 @@
 		</div>
 
 
+		<div class="diapo diapo_7 step step_orderToAnimate-7 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row flex-parent">
+							<div class="col-sm-6 flex-child">
+								<div>
+									<h1 class="text-left pb10">Emissió preolímpica #6</h1>
+									<p class="text-left pt20">Dissenyador: <strong>Perico Pastor.</strong><br>(La Seu d'Urgell, 1953). Esports representats: Pentatló, Piragüisme i Rem.</p>
+								</div>
+							</div>
+
+							<div>
+								<img class="absolute-center-right3 max-img imgmw320 rota3 sello1 step step_orderToAnimate-6 no-animated" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+							<div>
+								<img class="absolute-center-right2 max-img imgmw320 rota3 sello2" src="img/cinco/5/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="absolute-center-right1 max-img imgmw320 rotam3 sello3" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
 
 
-	</section>
+						</div>
 
-	<!-- SECCION 16 -->
-	<section class="section sixteen fondo5">
-
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row flex-parent">
-				<div class="col-sm-6 flex-child">
-					<div>
-						<h1 class="text-left pb10">Emissió preolímpica #6</h1>
-						<p class="text-left pt20">Dissenyador: <strong>Perico Pastor.</strong><br>(La Seu d'Urgell, 1953). Esports representats: Pentatló, Piragüisme i Rem.</p>
-					</div>
 				</div>
-
-				<div>
-					<img class="absolute-center-right3 max-img imgmw320 rota3" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-				<div>
-					<img class="absolute-center-right2 max-img imgmw320 rota3" src="img/cinco/5/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="absolute-center-right1 max-img imgmw320 rotam3" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-
 			</div>
+		</div>
+
+
+
+
 	</section>
+
 
 	<!-- SECCION 17 -->
 	<section class="section seventeen fondo5">
