feat(index_final): section 6 - diapo 8

--- a/index_final.html
+++ b/index_final.html
@@ -497,7 +497,7 @@
 								</div>
 							</div>
 
-							<img class="max-img imgmw320 sello1 step step_orderToAnimate-4 no-animated" src="img/cinco/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							<img class="max-img imgmw320 sello1 step step_orderToAnimate-5 no-animated" src="img/cinco/3/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 							<img class="absolute-center max-img imgmw320 sello2 no-animated" src="img/cinco/3/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
 							<img class="previs-bottom max-img imgmw320 sello3 no-animated" src="img/cinco/3/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 
@@ -508,7 +508,7 @@
 			</div>
 		</div>
 
-		<div class="diapo diapo_5 step step_orderToAnimate-5 no-animated">
+		<div class="diapo diapo_5 step step_orderToAnimate-6 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
 
@@ -525,7 +525,7 @@
 						</div>
 					</div>
 
-					<img class="previs-top3 max-img imgmw320 rotam3 sello1 step step_orderToAnimate-6 no-animated" src="img/cinco/4/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+					<img class="previs-top3 max-img imgmw320 rotam3 sello1 step step_orderToAnimate-7 no-animated" src="img/cinco/4/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 					<img class="absolute-center-left max-img imgmw320 rota3 sello2" src="img/cinco/4/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
 					<img class="previs-bottom-right max-img imgmw320 rotam3 sello3" src="img/cinco/4/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 
@@ -534,7 +534,7 @@
 		</div>
 
 
-		<div class="diapo diapo_6 step step_orderToAnimate-6 no-animated">
+		<div class="diapo diapo_6 step step_orderToAnimate-8 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
 
@@ -549,7 +549,7 @@
 							</div>
 
 							<div>
-								<img class="previs-top-center max-img imgmw320 rotam3 sello1 step step_orderToAnimate-6 no-animated" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+								<img class="previs-top-center max-img imgmw320 rotam3 sello1 step step_orderToAnimate-9 no-animated" src="img/cinco/5/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
 							</div>
 
 							<div>
@@ -569,7 +569,7 @@
 		</div>
 
 
-		<div class="diapo diapo_7 step step_orderToAnimate-7 no-animated">
+		<div class="diapo diapo_7 step step_orderToAnimate-10 no-animated">
 			<div class="diapo_container">
 				<div class="diapo_content">
 
@@ -584,7 +584,7 @@
 							</div>
 
 							<div>
-								<img class="absolute-center-right3 max-img imgmw320 rota3 sello1 step step_orderToAnimate-6 no-animated" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+								<img class="absolute-center-right3 max-img imgmw320 rota3 sello1 step step_orderToAnimate-11 no-animated" src="img/cinco/5/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
 							</div>
 
 							<div>
@@ -597,44 +597,47 @@
 
 
 						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="diapo diapo_8 step step_orderToAnimate-12 no-animated">
+			<div class="diapo_container">
+				<div class="diapo_content">
+
+					<!-- Contenido -->
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-12">
+								<div>
+									<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1>
+									<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>.(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
+								</div>
+							</div>
+
+							<div>
+								<img class="previs-top4 max-img imgmw320 sello1 step step_orderToAnimate-13 no-animated" src="img/cinco/7/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
+							</div>
+
+							<div>
+								<img class="absolute-center-right4 max-img imgmw320 sello2" src="img/cinco/7/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
+							</div>
+
+							<div>
+								<img class="previs-bottom-right3 max-img imgmw320 sello3" src="img/cinco/7/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
+							</div>
+
+
+						</div>
+					</div>
 
 				</div>
 			</div>
 		</div>
 
 
-
-
-	</section>
-
-
-	<!-- SECCION 17 -->
-	<section class="section seventeen fondo5">
-
-		<!-- Contenido -->
-		<div class="container">
-			<div class="row">
-				<div class="col-sm-12">
-					<div>
-						<h1 class="text-center pt40 pb10">Emissió preolímpica #7</h1>
-						<p class="text-center pt20">Dissenyador: <strong>Joan-Pere Viladecans.</strong><br>.(Barcelona, 1948). Esports representats: Tennis, Tennis de taula i Tir olímpic.</p>
-					</div>
-				</div>
-
-				<div>
-					<img class="previs-top4 max-img imgmw320" src="img/cinco/7/sello1.png" alt="Sello Olímpico Robert Llimós i Oriol 1'">
-				</div>
-
-				<div>
-					<img class="absolute-center-right4 max-img imgmw320" src="img/cinco/7/sello2.png" alt="Sello Olímpico Robert Llimós i Oriol 2'">
-				</div>
-
-				<div>
-					<img class="previs-bottom-right3 max-img imgmw320" src="img/cinco/7/sello3.png" alt="Sello Olímpico Robert Llimós i Oriol 3'">
-				</div>
-
-
-			</div>
 	</section>
 
 	<!-- SECCION 18 -->
